--- a/mysite/templates/survey.html
+++ b/mysite/templates/survey.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="static\uwu.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-  <title>DAS Survey</title>
+  <title>DASS Survey</title>
 
   <style>
     html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
@@ -20,9 +20,9 @@
 <body>
 
 <!-- Navbar -->
-  <div class="w3-right w3-bar w3-large" style="background-color:#ce8f5a"> 
+  <div class="w3-right w3-bar w3-large" style="background-color:#ce8f5a">
     <img src="static\gator.png" width=62px height=40px>
-    
+
     <a href="#contact" class="w3-right w3-bar-item w3-button">Contact Info</a>
   </div>
 <!-- Header -->
@@ -44,7 +44,7 @@
       <div class="rate">
         <H3>Please rank your answers according to the following scale.  Don't think too hard!</H3>
       </div>
-      
+
       <div class="w3-row-padding w3-padding-16">
         <div class="w3-padding-large">
           <label for="text"><b><font style="color:#59705b; font-size: large;">1 - Did not apply to me at all</font></b></label><BR>
@@ -481,16 +481,21 @@
       </div>
 
 
+
+
   </form>
 
-</div>
 
 </div>
 
-<div id="contact"></div>
-  <footer class="w3-container w3-center w3-light-grey w3-padding-16">
-    <p>HI</p>
-  </footer>
+</div>
+<div>
+    <p align="center"><a href=predict ><button class=grey style="height:75px;width:150px">Results</button></a></p>
+</div>
+<!--<div id="contact"></div>-->
+<!--  <footer class="w3-container w3-center w3-light-grey w3-padding-16">-->
+<!--    <p>HI</p>-->
+<!--  </footer>-->
 
 <footer class="w3-container w3-grey w3-center w3-margin-top">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
